tests/snapshots/preprocessor__stringification.snap
---
source: tests/preprocessor.rs
expression: "&mine"
---
stdout: "hello\nhello world\n123\n1 + 2\n"
status: 0
