tests/snapshots/preprocessor__variadic_macros.snap
---
source: tests/preprocessor.rs
expression: "&mine"
---
stdout: "10 20 30\n42\n5\n15\n30\n"
status: 0
